# real-time-kpi-streaming

./: .gitignore  FRONTEND_GUIDE_RU.md  IMPLEMENTATION_CHAPTER_TEMPLATE (2).tex  MANUAL_TEST.md  README.md  conftest.py  docker-compose.yml  pyproject.toml
db/init/: 001_schema.sql  002_kpis.sql
services/alerting/: Dockerfile  pyproject.toml  settings.toml
services/alerting/src/: main.py  settings.py
services/alerting/src/domain/: alert_repository.py
services/alerting/tests/: test_alert_service.py  test_alerting_validation.py
services/ingest-api/: Dockerfile  pyproject.toml  settings.toml
services/ingest-api/src/ingest_api/: main.py  settings.py
services/ingest-api/src/ingest_api/api/: ingest.py  kpi.py  schemas.py
services/ingest-api/src/ingest_api/domain/: db.py  kpi_repository.py
services/ingest-api/src/ingest_api/services/: ingest_service.py  kpi_service.py
services/ingest-api/tests/: test_ingest_helpers.py  test_kpi_service_and_api_helpers.py
services/simulator/: Dockerfile  pyproject.toml  settings.toml
services/simulator/src/simulator/: api.py  controller.py  main.py  settings.py
services/simulator/tests/: test_simulator_controller_and_api.py
services/stream-processor/: Dockerfile  pyproject.toml  settings.toml
services/stream-processor/tests/: test_processor_message_mapping.py  test_stream_helpers.py
tests/: READMDE.md  README.md  requirements.txt  secrets.example.toml  test_error_rate.py  test_kpi_accuracy_and_validation.py  test_latency.py  test_latency_under_load.py  testing_helpers.py
(+7 files in other folders)
