[project]
name = "ingest-api"
version = "0.1.0"
description = "FastAPI ingestion service for KPI platform"
requires-python = ">=3.14"
dependencies = [
    "aiokafka==0.13.0",
    "asyncpg==0.31.0",
    "dynaconf",
    "fastapi==0.128.0",
    "pydantic==2.12.5",
    "uvicorn[standard]==0.40.0",
]

[dependency-groups]
dev = [
    "pytest",
]
