[project]
name = "simulator"
version = "0.1.0"
description = "Synthetic KPI data simulator"
requires-python = ">=3.14"
dependencies = [
    "dynaconf",
    "fastapi==0.128.0",
    "httpx==0.28.1",
    "pydantic==2.12.5",
    "uvicorn[standard]==0.40.0",
]

[dependency-groups]
dev = [
    "pytest",
]
